--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,10 @@
 <%= form_with model: @user, multipart: true do |form| %>
-  <div>
+  <div class="form-group">
+    <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-  <div>
+  <div class="form-group">
+    <%= form.label :role %>
     <%= form.select :role, User.roles.keys, selected: @user.role %>
   </div>
 
