--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,30 @@
 <div class="container">
-
-
-  <% @users.each do |user| %>
-    <% if user.Customer_support? %>
+  <%= button_to 'Logout', logout_path, :method => :delete %>
+  <br>
+  <div>
+    <% if current_user.Customer_support? %>
       <h2> Role: Customer Support </h2>
-    <% elsif user.Super_Admin? %>
+    <% elsif current_user.Super_Admin? %>
       <h2> Role: Super Admin </h2>
-    <% elsif user.Admin? %>
+    <% elsif current_user.Admin? %>
       <h2> Role: Admin </h2>
-    <% elsif user.Designers? %>
+    <% elsif current_user.Designers? %>
       <h2> Role: Designers </h2>
     <% end %>
-    <% unless user.Customer_support? %>
-      <div>
-        <%= link_to "Create User", new_user_path %>
-      </div>
-    <% end %>
-    <table class="table">
-      <thead>
-        <th>Name</th>
-        <th>Role</th>
-        <th></th>
-      </thead>
-      <tbody>
+  </div>
+  <% unless current_user.Customer_support? %>
+    <div>
+      <%= link_to "Create User", new_user_path %>
+    </div>
+  <% end %>
+  <table class="table">
+    <thead>
+      <th>Name</th>
+      <th>Role</th>
+      <th></th>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
         <tr>
           <td><%= user.name %></td>
           <td>
@@ -30,17 +32,17 @@
           </td>
           <td>
             <%= link_to "Show", user_path(user) %>
-            <% if user.Super_Admin? || user.Admin? %>
+            <% if current_user.Super_Admin? || current_user.Admin? %>
               <%= link_to "Edit", edit_user_path(user) %>
             <% end %>
-            <% if user.Super_Admin? %>
+            <% if current_user.Super_Admin? %>
               <%= link_to "Destroy", user_path(user),
                     method: :delete,
                     data: { confirm: "Are you sure?" } %>
             <% end %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  <% end %>
+      <% end %>
+    </tbody>
+  </table>
 </div>
