--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,12 +1,16 @@
 <%= form_with model: @user, multipart: true do |form| %>
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-  <div class="form-group">
-    <%= form.label :role %>
-    <%= form.select :role, User.roles.keys, selected: @user.role %>
-  </div>
+  <div class="card">
+    <div class="card-body">
+      <div class="mb-3">
+        <%= form.label :name %>
+        <%= form.text_field :name %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :role %>
+        <%= form.select :role, User.roles.keys, selected: @user.role %>
+      </div>
 
-  <%= submit_tag "Submit" %>
+      <%= submit_tag "Submit" %>
+    </div>
+  </div>
 <% end %>
