--- a/app/assets/stylesheets/logins.scss
+++ b/app/assets/stylesheets/logins.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the logins controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+  margin: 45px;
+}
