--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron text-centre col s12 m6 offset-m3 center-align" style="margin: 45px;">
   <div class="container">
     <%= google_sign_in_button 'Sign in with Google account', proceed_to: create_login_url , class: 'btn btn-primary'%>
   </div>
