--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,9 @@
-<div class="container">
-  <table class="table">
-    <thead>
-      <th>Name</th>
-      <th>Role</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= @user.name %></td>
-        <td>
-          <%= @user.role %>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container text-center">
+  <h2>User Details</h2>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <h5>Name: <%= @user.name %></h4>
+      <h5>Role: <%= @user.role %></h4>
+    </div>
+  </div>
 </div>
