--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <%= button_to 'Logout', logout_path, :method => :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
