--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-  <%= button_to 'Logout', logout_path, :method => :delete %>
   <br>
   <div>
     <h2> Role: <%= user_role %> </h2>
@@ -10,18 +9,27 @@
     <div class="col-sm-2">
       <%= button_to 'Orders Data', access_management_index_path, method: :get, class: 'btn btn-info' %>
     </div>
-    <div class="col-sm-2">
-      <%= button_to 'Create Customer', new_customer_path, method: :get, class: 'btn btn-info' %>
-    </div>
-    <div class="col-sm-2">
-      <%= button_to 'All Customer', customers_path, method: :get, class: 'btn btn-info' %>
-    </div>
-    <div class="col-sm-2">
-      <%= button_to 'Create Product', new_product_path, method: :get, class: 'btn btn-info' %>
-    </div>
-    <div class="col-sm-2">
-      <%= button_to 'All Product', products_path, method: :get, class: 'btn btn-info' %>
-    </div>
+    <% if current_user.SuperAdmin? || current_user.Admin? %>
+      <div class="col-sm-2">
+        <%= button_to 'Create Customer', new_customer_path, method: :get, class: 'btn btn-info' %>
+      </div>
+      <div class="col-sm-2">
+        <%= button_to 'All Customer', customers_path, method: :get, class: 'btn btn-info' %>
+      </div>
+      <div class="col-sm-2">
+        <%= button_to 'Create Product', new_product_path, method: :get, class: 'btn btn-info' %>
+      </div>
+      <div class="col-sm-2">
+        <%= button_to 'All Product', products_path, method: :get, class: 'btn btn-info' %>
+      </div>
+    <% elsif current_user.Designers? %>
+      <div class="col-sm-2">
+        <%= button_to 'Create Customer', new_customer_path, method: :get, class: 'btn btn-info' %>
+      </div>
+      <div class="col-sm-2">
+        <%= button_to 'Create Product', new_product_path, method: :get, class: 'btn btn-info' %>
+      </div>
+    <% end %>
     <div class="col-sm-1">
     </div>
   </div>
